// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CodeCell component CodeCell renders 1`] = `
<div>
  <table>
    <tbody>
      <tr>
        <td
          class="table--cell--code"
        >
          <div
            class="fieldGroup"
          >
            <span
              class="typography"
            >
              DATA
            </span>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`CodeCell component CodeCell renders when hidden 1`] = `
<div>
  <table>
    <tbody>
      <tr>
        <td
          class="table--cell--code"
          style="display: none;"
        >
          <div
            class="fieldGroup"
          >
            <span
              class="typography"
            >
              DATA
            </span>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`CodeCell component CodeCell renders with forced value 1`] = `
<div>
  <table>
    <tbody>
      <tr>
        <td
          class="ellipsis table--cell--code"
        >
          <div
            class="fieldGroup"
          >
            <span
              class="typography ellipsis"
              title="FORCEDVALUE"
            >
              FORCEDVALUE
            </span>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;
